<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/textCity"
        android:text="@string/nama"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/temperature"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/deskripsi"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>