<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <LinearLayout
        android:weightSum="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:inputType="numberDecimal"
            android:text="@string/jakarta_semarang"
            android:id="@+id/editCity"
            android:hint="@string/masukkan_id_kota_misal_jakarta_1642911"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <Button
            android:text="@string/cari"
            android:layout_weight="0.2"
            android:id="@+id/btnCity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/inputText"
        android:layout_marginTop="1dp"
        android:id="@+id/recyclerView" />

</RelativeLayout>